# Triple_Tikitaka

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dataset.dvc  docker-compose.yml  models.dvc  process.md  pyproject.toml  start.sh
app/: inference.py  inference_explained.md
app/static/: index.html
docker/grafana/provisioning/dashboards/: app-dashboard.json  dashboards.yml
docker/prometheus/: prometheus.yml
notebooks/: 01_preprocessing.ipynb  02_training.ipynb  03_evaluation.ipynb
scripts/: start.sh
