[project]
name = "triple-tikitaka"
version = "0.1.0"
description = "agentic birdclef2025"    
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (<3)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchaudio (>=2.11.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numba (>=0.65.1,<0.66.0)",
    "timm (>=1.0.26,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "mlflow (>=3.11.1,<4.0.0)",
    "torchcodec (>=0.11.1,<0.12.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
